align service 3 fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,8 +71,6 @@ body {
 }
 
 .navbar-img {
-    /* width: 134px;
-    height: 47px; */
 
     width: auto;
     height: 38px;
@@ -97,9 +95,6 @@ body {
     font-size: 17px;
 
     text-shadow: 0px 0px 10px black;
-
-    /* background-color: #0000003f;
-    border-radius: 40px; */
 }
 
 .hero-logo img {
@@ -257,8 +252,6 @@ body {
 
 .container-2 {
     padding: 40px;
-    /* margin-left: 10px;
-    margin-right: 10px; */
 }
 
 .grid-2 {
@@ -394,7 +387,6 @@ body {
     column-gap: 0%;
     row-gap: 3%;
     height: 360px;
-    /* width: 1040px; */
 
     grid-template-columns: 30% 36% 33%;
     grid-template-rows: 31% 31% 31%;
@@ -412,12 +404,9 @@ body {
 }
 
 .text1-service1 {
-    /* font-size: 18px; */
     font-size: small;
     padding-left: 48px;
     padding-right: 10px;
-
-    /* line-height: ; */
 }
 
 .text2-service1 {
@@ -437,9 +426,6 @@ body {
 .img1-service1 {
     object-fit: contain;
     width: 86%;
-    /* position: relative;
-    left: -45px; */
-
 
 }
 
@@ -464,7 +450,6 @@ body {
     column-gap: 0px;
     row-gap: 0px;
     height: 360px;
-    /* width: 600px; */
 
     grid-template-columns: 33% 33% 33%;
     grid-template-rows: 15% auto auto auto;
@@ -477,7 +462,6 @@ body {
     ;
 }
 
-/* .service2:hover .title-service2 */
 
 .title-service2 {
     font-size: 29px;
@@ -497,8 +481,6 @@ body {
 
 .img-service2 {
     height: 160px;
-    /* position: relative;
-    right: 50px; */
 }
 
 /* intalacion de camaras */
@@ -507,9 +489,6 @@ body {
     column-gap: 8%;
     row-gap: 3%;
     height: 500px;
-    /* padding-right: 50px; */
-
-    /* width: 600px; */
 
     grid-template-columns: 50% 42%;
     grid-template-rows: auto auto auto;
@@ -747,16 +726,14 @@ body {
     padding-bottom: 20px;
 }
 
-.dowload-img-container {}
 
 .dowload-img {
     /* object-fit: contain; */
     width: 85%;
 }
 
-.download-files {}
-
 .download-element {
+    justify-content: space-evenly;
     border-radius: 30px;
     background-color: #000000;
     margin-top: 20px;
@@ -929,7 +906,6 @@ footer {
 
     .img1-service1 {
         height: 110%;
-        /* width: 110%; */
     }
 
     .img2-service1-axis-x {
@@ -973,7 +949,9 @@ footer {
             'text3      text3      '
         ;
 
-        --leftPaddingService3-1: 0px
+        --leftPaddingService3-1: 0px;
+        position: relative;
+        left: 50px;
     }
 
 
@@ -1000,7 +978,6 @@ footer {
 
     .text2-service3 {
         text-align: center;
-        /* font-size: 24px; */
         font-weight: 500;
         font-size: 16px;
         line-height: normal;
@@ -1318,6 +1295,7 @@ footer {
 
     .service3 {
         height: auto;
+        position: static;
     }
 
     .text2-service3 {
@@ -2165,7 +2143,7 @@ footer {
             'text1 text1'
             'text2 text2'
             'text3 img1'
-            ;
+        ;
     }
 
     .title-service4 {
@@ -2177,6 +2155,7 @@ footer {
 
         margin: 0px;
     }
+
     .img1-service4 {
         width: 100%;
     }
@@ -2193,8 +2172,8 @@ footer {
         object-fit: contain;
         width: 90%;
     }
-    
-    
+
+
 
 }
 
